--- a/provider_server/templates/provider/estimates/provider_estimate_detail.html
+++ b/provider_server/templates/provider/estimates/provider_estimate_detail.html
@@ -80,12 +80,12 @@
     <!-- 첨부 파일 -->
     <div class="attachments-section">
         <div class="file-item">
-            <img src="{% static 'img/estimate/hwp.png' %}" alt="HWP">
+            <img src="{% static 'img/estimate/document.png' %}" alt="HWP">
             <span>방문 예약 신청서.hwp</span>
             <button class="download-btn">다운로드</button>
         </div>
         <div class="file-item">
-            <img src="{% static 'img/estimate/hwp.png' %}" alt="HWP">
+            <img src="{% static 'img/estimate/document.png' %}" alt="HWP">
             <span>방문 서약서.hwp</span>
             <button class="download-btn">다운로드</button>
         </div>
@@ -94,9 +94,9 @@
     <!-- 현장 사진 -->
     <div class="site-photos">
         <div class="photo-grid">
-            <img src="{% static 'img/site/photo1.jpg' %}" alt="현장 사진 1">
-            <img src="{% static 'img/site/photo2.jpg' %}" alt="현장 사진 2">
-            <img src="{% static 'img/site/photo3.jpg' %}" alt="현장 사진 3">
+            <img src="{% static 'img/estimate/site/photo1.png' %}" alt="현장 사진 1">
+            <img src="{% static 'img/estimate/site/photo2.png' %}" alt="현장 사진 2">
+            <img src="{% static 'img/estimate/site/photo3.png' %}" alt="현장 사진 3">
         </div>
     </div>
 
