💡 chore    : 메인페이지 카테고리 로직 수정

--- a/demand_server/templates/components/header.html
+++ b/demand_server/templates/components/header.html
@@ -18,7 +18,7 @@
                 <a href="#">서비스</a>
                 <ul class="dropdown-menu">
                     {% for category in categories %}
-                        <li><a href="{% url 'services:main' %}">{{ category.name }}</a></li>
+                        <li><a href="#">{{ category.name }}</a></li>
                     {% endfor %}
                 </ul>
             </li>
