--- a/demand_server/templates/components/header.html
+++ b/demand_server/templates/components/header.html
@@ -76,7 +76,7 @@ function confirmProviderSwitch() {
     const userConfirmed = confirm("대행사로 전환하시겠습니까?");
     
     if (userConfirmed) {
-        window.location.href = "http://localhost:8001/";
+        window.location.href = "http://3.82.25.34:8001/";
     }
 }
 </script>
