--- a/provider_server/templates/components/provider_header.html
+++ b/provider_server/templates/components/provider_header.html
@@ -1,8 +1,47 @@
 {% load static %}
 
-{% block extra_css %}
+
+{% block content %}
+
 <link rel="stylesheet" href="{% static 'css/components/header.css' %}">
-{% endblock %}
+
+<style>
+    .login-menu {
+    display: flex;
+    align-items: center; /* 아이콘 수직 중앙 정렬 */
+    justify-content: center; /* 가운데 정렬 (필요에 따라 변경 가능) */
+    gap: 15px; /* 아이콘 간 간격 */
+    list-style: none; /* 기본 리스트 스타일 제거 */
+    padding: 0;
+    margin: 0;
+}
+
+.login-menu li {
+    display: flex;
+    align-items: center;
+}
+
+.login-menu li a {
+    display: flex;
+    align-items: center;
+    justify-content: center;
+    width: 50px; /* 아이콘 크기 조정 */
+    height: 50px;
+    border-radius: 10px; /* 아이콘 주변 테두리 둥글게 */
+    transition: background-color 0.3s ease;
+}
+
+.login-menu li a:hover {
+    background-color: rgba(255, 255, 255, 0.2); /* 호버 효과 */
+}
+
+.login-menu li img {
+    width: 30px; /* 아이콘 크기 조정 */
+    height: 30px;
+    filter: brightness(100%); /* 아이콘 가독성 향상 */
+}
+
+</style>
 
 <header>
     <div class="nav-logo">
@@ -19,10 +58,10 @@
         </div>
         <ul class="login-menu">
             {% if request.user.is_authenticated %}
-                <li class="active"><a id="main-link" href="http://localhost:8000/main">메인</a></li>
-                <li><a href="{% url 'provider_profile' %}">마이페이지</a></li>
-                <li><a href="#">알림</a></li>
-                <li><a id="logout-link" href="{% url 'provider_logout' %}">로그아웃</a></li>
+                <li class="active"><a id="main-link" href="http://localhost:8000/main"><img src="{% static 'img/components/header/Home.png' %}" alt="메인"></a></li>
+                <li><a href="{% url 'provider_profile' %}"><img src="{% static 'img/components/header/myinfo.png' %}" alt="마이페이지"></a></li>
+                <li><a href="#"><img src="{% static 'img/components/header/notification.png' %}" alt="메인"></a></li>
+                <li><a id="logout-link" href="{% url 'provider_logout' %}"><img src="{% static 'img/components/header/logout-w.png' %}" alt="로그아웃"></a></li>
             {% endif %}
         </ul>
     </div>
@@ -52,3 +91,5 @@ document.addEventListener("DOMContentLoaded", function () {
 </script>
 
 <script src="{% static 'js/components/navbar.js' %}"></script>
+
+{% endblock %}
